--- a/sandbox.html
+++ b/sandbox.html
@@ -4,8 +4,12 @@
 <script src="./js/classes.js"></script>
 <script src="./js/jquery-2.1.4.min.js"></script>
 </head>
-<body>
+<body >
   <div id="Laden"></div>
-  <button onclick="drawStore(supi1);">Draw</button>
+  <button onclick="supi1.drawStore();">Draw</button>
+  <script>
+  supi1.rectShelf(12,14,22,26);
+  supi1.drawStore();
+  </script>
 </body>
 </html>
