Warenliste wird sauber importiert. Immer noch keine Kommentare.

--- a/sandbox.html
+++ b/sandbox.html
@@ -1,23 +1,29 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<script src="./js/classes.js"></script>
+<script src="./js/classes2.js"></script>
 <script src="./js/jquery-2.1.4.min.js"></script>
-<script src="./js/main.js"></script>
+<meta charset="utf8">
 </head>
 <body>
+
   <div id="debug" style="height: 50px"></div>
   <div id="speedDiv" style="height: 50px">
     <input id="speed" type="number" value="2">
   </div>
   <div id="Laden"></div>
   <button onclick="supi1.drawStore();">Draw</button>
-  <button onclick="run = !run;">Start/Stop</buttion>
-  <script defer>
-  setup();
-  go();
-  //supi1.rectShelf(12,14,22,26);
-  //supi1.drawStore();
-  </script>
+  <button onclick="run = !run;">Start/Stop</button>
+
+	<?php
+		$bla = 'x';
+		//*print \<h1\>test</h1>";*/
+		//include './inc/klassen.php';
+		//include './inc/variablen.php';
+		//$dbh = new PDO(PDO_HOST.','.PDO_BENUTZER.','.PDO_KENNWORT);
+		//print_r($dbh);
+
+		//$bla = new VariablenJsWandler($dbh);
+		?>
 </body>
 </html>
